# CACL

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_PYPI.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: demo-tests.yml  library-tests.yml  publish.yml  tests.yml
alembic/: env.py
alembic/versions/: 0366911d4569_init.py
app/: db.py  main.py  settings.py
app/models/: users.py
app/routes/: auth.py  users.py
app/schemas/: users.py
app/services/: auth.py
app/utils/: auth.py
cacl/: README.md  db.py  dependencies.py  pyproject.toml  settings.py
cacl/models/: base.py  jwt_token.py
cacl/services/: jwt_token_service.py
cacl/utils/: model_loader.py  security.py
docs/: testing.md
docs/verification/: auth_e2e.md
examples/demo_app/: .env.sample  Dockerfile  README.md  docker-compose.yml  requirements.txt  verify_auth_e2e.sh
examples/demo_app/alembic/: env.py
examples/demo_app/alembic/versions/: 0366911d4569_init.py  a1b2c3d4e5f6_drop_jwt_tokens_user_id_fk.py
examples/demo_app/demo_app/: main.py
examples/demo_app/demo_app/core/: base.py  db.py  settings.py
examples/demo_app/demo_app/models/: users.py
examples/demo_app/demo_app/routes/: auth.py  users.py
examples/demo_app/demo_app/schemas/: auth.py
examples/demo_app/demo_app/scripts/: create_admin.py  create_user.py
examples/demo_app/demo_app/services/: auth.py
examples/demo_app/demo_app/utils/: auth.py
scripts/: create_admin.py  create_user.py  verify_auth_e2e.sh  verify_packaging.sh
tests/: test_bearer_mode.py  test_blacklist.py  test_dependencies.py  test_edge_cases.py  test_jwt_tokens.py  test_verification.py
