[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cacl"
version = "0.1.0"
description = "Reusable FastAPI authentication library with JWT tokens and database-backed blacklisting"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "python-jose>=3.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["cacl", "cacl.models", "cacl.services", "cacl.utils"]

[tool.setuptools.package-dir]
"cacl" = "."
"cacl.models" = "models"
"cacl.services" = "services"
"cacl.utils" = "utils"
